Update frontend submodule reference

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://AdminRick:fR4QsC77mmKgEtX7@transferlink.ppwze.mongodb.net/transferlink?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://AdminRick:8BtPciLVN8Vc2IgE@transferlink.ppwze.mongodb.net/transferlink?retryWrites=true&w=majority
 NODE_ENV=development
-CLERK_SECRET_KEY=sk_test_c5PQ8FEBtxtWeHP5jhWCZtF2Gkx3lhOzMz2xBa27rt
+CLERK_PUBLISHABLE_KEY=pk_test_YW11c2VkLWluc2VjdC05MC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_SNPRVJGaG0KszSSZrsQxXO59E53FHeFvqMnZJ46yhd
 FRONTEND_URL=http://localhost:3000
